Solr schema change adjustments.

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto"></div>
-            <a class="nav-link" href="http://54.173.176.161:8983/solr/banana/promising_practices_tst/index.html"><i class="far fa-chart-bar"></i> Dashboard</a>
+            <a class="nav-link" href="{{ config.DASHBOARD_URL }}"><i class="far fa-chart-bar"></i> Dashboard</a>
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle mr-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ g.user["full_name"] }}</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
