--- a/templates/practice/create.html
+++ b/templates/practice/create.html
@@ -30,7 +30,7 @@
                     <th scope="row">Intervention name</th>
                     <td>
                         <select class="custom-select" name="intervention_name">
-                            {% for intervention_name in intervention_names %}
+                            {% for intervention_name in config.INTERVENTION_NAMES %}
                                 <option value="{{ intervention_name }}">{{ intervention_name }}</option>
                             {% endfor %}
                         </select>
@@ -58,7 +58,7 @@
                     <th scope="row">Program success</th>
                     <td>
                         <select class="custom-select" name="program_success">
-                            {% for program_success in program_successes %}
+                            {% for program_success in config.PROGRAM_SUCCESSES %}
                                 <option value="{{ program_success }}">{{ program_success }}</option>
                             {% endfor %}
                         </select>
@@ -74,7 +74,7 @@
                     <th scope="row">Geography</th>
                     <td>
                         <select class="custom-select" multiple name="geography">
-                            {% for state in states %}
+                            {% for state in config.STATES %}
                                 <option value="{{ state }}">{{ state }}</option>
                             {% endfor %}
                         </select>
@@ -84,7 +84,7 @@
                     <th scope="row">Region</th>
                     <td>
                         <select class="custom-select" multiple name="region">
-                            {% for region in regions %}
+                            {% for region in config.REGIONS %}
                                 <option value="{{ region }}">{{ region }}</option>
                             {% endfor %}
                         </select>
@@ -94,7 +94,7 @@
                     <th scope="row">Source type</th>
                     <td>
                         <select class="custom-select" name="source_type">
-                            {% for source_type in source_types %}
+                            {% for source_type in config.SOURCE_TYPES %}
                                 <option value="{{ source_type }}">{{ source_type }}</option>
                             {% endfor %}
                         </select>
@@ -104,7 +104,7 @@
                     <th scope="row">Race</th>
                     <td>
                         <select class="custom-select" multiple name="race">
-                            {% for race in races %}
+                            {% for race in config.RACES %}
                                 <option value="{{ race }}">{{ race }}</option>
                             {% endfor %}
                         </select>
@@ -114,7 +114,7 @@
                     <th scope="row">Intervention goal</th>
                     <td>
                         <select class="custom-select" multiple name="intervention_goal">
-                            {% for goal in intervention_goals %}
+                            {% for goal in config.INTERVENTION_GOALS %}
                                 <option value="{{ goal }}">{{ goal }}</option>
                             {% endfor %}
                         </select>
@@ -124,7 +124,7 @@
                     <th scope="row">Implementers</th>
                     <td>
                         <select class="custom-select" multiple name="implementers">
-                            {% for implementer in implementers %}
+                            {% for implementer in config.IMPLEMENTERS %}
                                 <option value="{{ implementer }}">{{ implementer }}</option>
                             {% endfor %}
                         </select>
@@ -134,7 +134,7 @@
                     <th scope="row">Scale</th>
                     <td>
                         <select class="custom-select" multiple name="scale">
-                            {% for scale in scales %}
+                            {% for scale in config.SCALES %}
                                 <option value="{{ scale }}">{{ scale }}</option>
                             {% endfor %}
                         </select>
@@ -144,7 +144,7 @@
                     <th scope="row">Country</th>
                     <td>
                         <select class="custom-select" multiple name="country">
-                            {% for country in countries %}
+                            {% for country in config.COUNTRIES %}
                                 <option value="{{ country }}">{{ country }}</option>
                             {% endfor %}
                         </select>
@@ -154,7 +154,7 @@
                     <th scope="row">Program components</th>
                     <td>
                         <select class="custom-select" multiple name="program_components">
-                            {% for component in program_components %}
+                            {% for component in config.PROGRAM_COMPONENTS %}
                                 <option value="{{ component }}">{{ component }}</option>
                             {% endfor %}
                         </select>
@@ -164,7 +164,7 @@
                     <th scope="row">Population</th>
                     <td>
                         <select class="custom-select" multiple name="population">
-                            {% for population in populations %}
+                            {% for population in config.POPULATIONS %}
                                 <option value="{{ population }}">{{ population }}</option>
                             {% endfor %}
                         </select>
